--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <div id="game-board"></div>
-    <script src="./index.js" type="module"></script>
+    <script src="./js/index.js" type="module"></script>
 </body>
 </html>
